--- a/src/main/webapp/src/app/page/admin-panel/admin-panel.component.html
+++ b/src/main/webapp/src/app/page/admin-panel/admin-panel.component.html
@@ -1,29 +1,16 @@
 <form #bookForm="ngForm">
-  <button
-    type="submit"
-    class="add-book-button float-right btn btn-primary nav-link"
-    routerLink="/add-book"
-    routerLinkActive="active"
-  >
-    <span class="button__text">Add Book</span>
-    <span class="button__icon">
-      <svg
-        xmlns="http://www.w3.org/2000/svg"
-        width="24"
-        viewBox="0 0 24 24"
-        stroke-width="2"
-        stroke-linejoin="round"
-        stroke-linecap="round"
-        stroke="currentColor"
-        height="24"
-        fill="none"
-        class="svg"
-      >
-        <line y2="19" y1="5" x2="12" x1="12"></line>
-        <line y2="12" y1="12" x2="19" x1="5"></line>
-      </svg>
-    </span>
-  </button>
+  <div class="example-button-container float-right btn btn-primary nav-link">
+    <button
+      mat-fab
+      color="primary"
+      aria-label="Example icon button with a delete icon"
+      type="submit"
+      routerLink="/add-book"
+      routerLinkActive="active"
+    >
+      <span class="material-symbols-outlined">bookmark_add</span>
+    </button>
+  </div>
 </form>
 <div>
   <input
@@ -65,7 +52,7 @@
       <span *ngIf="sortDirection === 'desc'">&#x25BC;</span>
     </th>
     <th class="font-medium p-2 text-left"></th>
-    <th class="font-medium p-2 text-left"></th>
+    <!--    <th class="font-medium p-2 text-left"></th>-->
   </tr>
   <tr class="border-b hover:bg-gray-50" *ngFor="let DTO of adminPanelDTOs">
     <td class="p-2">{{ DTO.bookSignature }}</td>
@@ -89,60 +76,36 @@
     >
       {{ DTO.status }}
     </td>
-    <td class="p-2">
+    <td class="p-2 example-button-row">
       <button
+        mat-raised-button
+        color="primary"
         type="submit"
-        class="edit-button btn btn-primary nav-link"
+        class="btn btn-primary nav-link"
         [routerLink]="['/edit-book/', DTO.bookId]"
         routerLinkActive="active"
       >
-        Edit
+        <!--        Edit-->
+        <link
+          rel="stylesheet"
+          href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
+        />
+        <span class="material-symbols-outlined">edit_note</span>
       </button>
-    </td>
-    <td>
-      <button class="button" type="button" (click)="deleteOneSignatureAsAdmin(DTO.id)">
-        <!--(click)="deleteBook(DTO)"-->
-        <span class="button__text">Delete</span>
-        <span class="button__icon"
-          ><svg class="svg" height="512" viewBox="0 0 512 512" width="512" xmlns="http://www.w3.org/2000/svg">
-            <title></title>
-            <path
-              d="M112,112l20,320c.95,18.49,14.4,32,32,32H348c17.67,0,30.87-13.51,32-32l20-320"
-              style="fill: none; stroke: #fff; stroke-linecap: round; stroke-linejoin: round; stroke-width: 32px"
-            ></path>
-            <line
-              style="stroke: #fff; stroke-linecap: round; stroke-miterlimit: 10; stroke-width: 32px"
-              x1="80"
-              x2="432"
-              y1="112"
-              y2="112"
-            ></line>
-            <path
-              d="M192,112V72h0a23.93,23.93,0,0,1,24-24h80a23.93,23.93,0,0,1,24,24h0v40"
-              style="fill: none; stroke: #fff; stroke-linecap: round; stroke-linejoin: round; stroke-width: 32px"
-            ></path>
-            <line
-              style="fill: none; stroke: #fff; stroke-linecap: round; stroke-linejoin: round; stroke-width: 32px"
-              x1="256"
-              x2="256"
-              y1="176"
-              y2="400"
-            ></line>
-            <line
-              style="fill: none; stroke: #fff; stroke-linecap: round; stroke-linejoin: round; stroke-width: 32px"
-              x1="184"
-              x2="192"
-              y1="176"
-              y2="400"
-            ></line>
-            <line
-              style="fill: none; stroke: #fff; stroke-linecap: round; stroke-linejoin: round; stroke-width: 32px"
-              x1="328"
-              x2="320"
-              y1="176"
-              y2="400"
-            ></line></svg
-        ></span>
+
+      <button
+        mat-raised-button
+        color="warn"
+        type="submit"
+        class="btn btn-danger"
+        (click)="deleteOneSignatureAsAdmin(DTO.id)"
+      >
+        <!--        Delete-->
+        <link
+          rel="stylesheet"
+          href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
+        />
+        <span class="material-symbols-outlined">delete_forever</span>
       </button>
     </td>
   </tr>
