zmiana wizualna przycisków

--- a/src/main/webapp/src/app/page/reserved/reserved.component.html
+++ b/src/main/webapp/src/app/page/reserved/reserved.component.html
@@ -19,8 +19,13 @@
       {{ book.status }}
     </td>
     <td class="p-2">{{ book.genre }}</td>
-    <td class="p-2">
-      <button (click)="postCancelReservedBookByUser(book)" [disabled]="isButtonDisabled">
+    <td class="p-2" class="example-button-row">
+      <button
+        mat-raised-button
+        color="primary"
+        (click)="postCancelReservedBookByUser(book)"
+        [disabled]="isButtonDisabled"
+      >
         <span class="material-icons">disabled_by_default</span>
       </button>
     </td>
