--- a/src/main/webapp/src/app/page/reserved/reserved.component.html
+++ b/src/main/webapp/src/app/page/reserved/reserved.component.html
@@ -20,12 +20,7 @@
     </td>
     <td class="p-2">{{ book.genre }}</td>
     <td class="p-2" class="example-button-row">
-      <button
-        mat-raised-button
-        color="primary"
-        (click)="postCancelReservedBookByUser(book)"
-        [disabled]="isButtonDisabled"
-      >
+      <button mat-raised-button color="warn" (click)="postCancelReservedBookByUser(book)" [disabled]="isButtonDisabled">
         <span class="material-icons">disabled_by_default</span>
       </button>
     </td>
