--- a/src/main/webapp/src/app/page/admin-panel/add-book-modal/add-book-modal.component.html
+++ b/src/main/webapp/src/app/page/admin-panel/add-book-modal/add-book-modal.component.html
@@ -5,7 +5,7 @@
         <div class="card-body">
           <h3 class="form-heading">Add new book</h3>
           <br />
-          <form class="book-form" (ngSubmit)="onSubmit()">
+          <form class="book-form" (ngSubmit)="onSubmit()" novalidate>
             <div class="form-group">
               <label for="title">Title:</label>
               <input
@@ -74,35 +74,35 @@
                           />
                         </div>
                       </div>
-                      <div class="col-md-3">
-                        <div class="form-group">
-                          <label for="birthDate{{ i }}">Birth Date:</label>
-                          <input
-                            type="date"
-                            class="form-control"
-                            id="birthDate{{ i }}"
-                            [(ngModel)]="author.birthDate"
-                            name="birthDate{{ i }}"
-                            required
-                          />
-                        </div>
-                      </div>
-                      <div class="col-md-3">
-                        <div class="form-group">
-                          <label for="gender{{ i }}">Gender:</label>
-                          <select
-                            class="form-control"
-                            id="gender{{ i }}"
-                            [(ngModel)]="author.gender"
-                            name="gender{{ i }}"
-                            required
-                          >
-                            <option value="male">Male</option>
-                            <option value="female">Female</option>
-                            <option value="other">Other</option>
-                          </select>
-                        </div>
-                      </div>
+                      <!--                      <div class="col-md-3">-->
+                      <!--                        <div class="form-group">-->
+                      <!--                          <label for="birthDate{{ i }}">Birth Date:</label>-->
+                      <!--                          <input-->
+                      <!--                            type="date"-->
+                      <!--                            class="form-control"-->
+                      <!--                            id="birthDate{{ i }}"-->
+                      <!--                            [(ngModel)]="author.birthDate"-->
+                      <!--                            name="birthDate{{ i }}"-->
+                      <!--                            required-->
+                      <!--                          />-->
+                      <!--                        </div>-->
+                      <!--                      </div>-->
+                      <!--                      <div class="col-md-3">-->
+                      <!--                        <div class="form-group">-->
+                      <!--                          <label for="gender{{ i }}">Gender:</label>-->
+                      <!--                          <select-->
+                      <!--                            class="form-control"-->
+                      <!--                            id="gender{{ i }}"-->
+                      <!--                            [(ngModel)]="author.gender"-->
+                      <!--                            name="gender{{ i }}"-->
+                      <!--                            required-->
+                      <!--                          >-->
+                      <!--                            <option value="male">Male</option>-->
+                      <!--                            <option value="female">Female</option>-->
+                      <!--                            <option value="other">Other</option>-->
+                      <!--                          </select>-->
+                      <!--                        </div>-->
+                      <!--                      </div>-->
                     </div>
                   </div>
                 </div>
@@ -111,20 +111,22 @@
                 <button type="button" class="btn btn-primary" (click)="addAuthor()">Add Author</button>
               </div>
             </fieldset>
-            <div class="form-group" *ngFor="let signature of bookDTO.adminSignatureDTO; let i = index">
-              <label for="bookSignature{{ i }}">Book Signature:</label>
-              <input
-                type="text"
-                class="form-control"
-                id="bookSignature{{ i }}"
-                placeholder="Book signature..."
-                [(ngModel)]="signature.bookSignature"
-                name="bookSignature{{ i }}"
-                required
-              />
-            </div>
-            <div class="form-group">
-              <button type="button" class="btn btn-primary" (click)="addSignature()">Add Signature</button>
+            <div>
+              <div class="form-group" *ngFor="let signature of bookDTO.adminSignatureDTO; let i = index">
+                <label for="bookSignature{{ i }}">Book Signature:</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="bookSignature{{ i }}"
+                  placeholder="Book signature..."
+                  [(ngModel)]="signature.bookSignature"
+                  name="bookSignature{{ i }}"
+                  required
+                />
+              </div>
+              <div class="form-group">
+                <button type="button" class="btn btn-primary" (click)="addSignature()">Add Signature</button>
+              </div>
             </div>
             <div>
               <button class="btn btn-success nav-link" type="submit">Add Book</button>
