--- a/src/main/webapp/src/app/page/admin-panel/add-book-modal/add-book-modal.component.scss
+++ b/src/main/webapp/src/app/page/admin-panel/add-book-modal/add-book-modal.component.scss
@@ -66,3 +66,10 @@ button {
 button:hover {
   background-color: #0062cc;
 }
+.notification {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
