--- a/src/main/webapp/src/app/page/admin-panel/edit-book/edit-book.component.html
+++ b/src/main/webapp/src/app/page/admin-panel/edit-book/edit-book.component.html
@@ -74,35 +74,35 @@
                           />
                         </div>
                       </div>
-                      <div class="col-md-3">
-                        <div class="form-group">
-                          <label for="birthDate{{ i }}">Birth Date:</label>
-                          <input
-                            type="date"
-                            class="form-control"
-                            id="birthDate{{ i }}"
-                            [(ngModel)]="author.birthDate"
-                            name="birthDate{{ i }}"
-                            required
-                          />
-                        </div>
-                      </div>
-                      <div class="col-md-3">
-                        <div class="form-group">
-                          <label for="gender{{ i }}">Gender:</label>
-                          <select
-                            class="form-control"
-                            id="gender{{ i }}"
-                            [(ngModel)]="author.gender"
-                            name="gender{{ i }}"
-                            required
-                          >
-                            <option value="male">Male</option>
-                            <option value="female">Female</option>
-                            <option value="other">Other</option>
-                          </select>
-                        </div>
-                      </div>
+                      <!--                      <div class="col-md-3">-->
+                      <!--                        <div class="form-group">-->
+                      <!--                          <label for="birthDate{{ i }}">Birth Date:</label>-->
+                      <!--                          <input-->
+                      <!--                            type="date"-->
+                      <!--                            class="form-control"-->
+                      <!--                            id="birthDate{{ i }}"-->
+                      <!--                            [(ngModel)]="author.birthDate"-->
+                      <!--                            name="birthDate{{ i }}"-->
+                      <!--                            required-->
+                      <!--                          />-->
+                      <!--                        </div>-->
+                      <!--                      </div>-->
+                      <!--                      <div class="col-md-3">-->
+                      <!--                        <div class="form-group">-->
+                      <!--                          <label for="gender{{ i }}">Gender:</label>-->
+                      <!--                          <select-->
+                      <!--                            class="form-control"-->
+                      <!--                            id="gender{{ i }}"-->
+                      <!--                            [(ngModel)]="author.gender"-->
+                      <!--                            name="gender{{ i }}"-->
+                      <!--                            required-->
+                      <!--                          >-->
+                      <!--                            <option value="male">Male</option>-->
+                      <!--                            <option value="female">Female</option>-->
+                      <!--                            <option value="other">Other</option>-->
+                      <!--                          </select>-->
+                      <!--                        </div>-->
+                      <!--                      </div>-->
                     </div>
                   </div>
                 </div>
